// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`profile round-trips > CineStill 50D — processImageData with default settings produces stable output 1`] = `
[
  42,
  77,
  91,
  255,
  147,
  143,
  143,
  255,
  221,
  213,
  210,
  255,
  59,
  65,
  68,
  255,
]
`;

exports[`profile round-trips > CineStill 400D — processImageData with default settings produces stable output 1`] = `
[
  39,
  79,
  95,
  255,
  155,
  147,
  147,
  255,
  226,
  218,
  215,
  255,
  60,
  66,
  69,
  255,
]
`;

exports[`profile round-trips > CineStill 800T — processImageData with default settings produces stable output 1`] = `
[
  40,
  91,
  132,
  255,
  172,
  165,
  198,
  255,
  230,
  228,
  230,
  255,
  61,
  78,
  102,
  255,
]
`;

exports[`profile round-trips > CineStill BwXX — processImageData with default settings produces stable output 1`] = `
[
  47,
  47,
  47,
  255,
  134,
  134,
  134,
  255,
  217,
  217,
  217,
  255,
  40,
  40,
  40,
  255,
]
`;

exports[`profile round-trips > Fomapan 100 — processImageData with default settings produces stable output 1`] = `
[
  54,
  54,
  54,
  255,
  136,
  136,
  136,
  255,
  214,
  214,
  214,
  255,
  47,
  47,
  47,
  255,
]
`;

exports[`profile round-trips > Fomapan 200 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  136,
  136,
  136,
  255,
  213,
  213,
  213,
  255,
  49,
  49,
  49,
  255,
]
`;

exports[`profile round-trips > Fomapan 400 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  137,
  137,
  137,
  255,
  216,
  216,
  216,
  255,
  49,
  49,
  49,
  255,
]
`;

exports[`profile round-trips > Fuji Astia 100F — processImageData with default settings produces stable output 1`] = `
[
  31,
  71,
  91,
  255,
  128,
  138,
  146,
  255,
  203,
  208,
  216,
  255,
  45,
  59,
  66,
  255,
]
`;

exports[`profile round-trips > Fuji Pro 160NS — processImageData with default settings produces stable output 1`] = `
[
  34,
  83,
  103,
  255,
  130,
  153,
  162,
  255,
  205,
  223,
  228,
  255,
  49,
  71,
  79,
  255,
]
`;

exports[`profile round-trips > Fuji Provia 100F — processImageData with default settings produces stable output 1`] = `
[
  26,
  70,
  92,
  255,
  127,
  138,
  147,
  255,
  203,
  209,
  217,
  255,
  43,
  58,
  65,
  255,
]
`;

exports[`profile round-trips > Fuji Superia X-TRA 400 — processImageData with default settings produces stable output 1`] = `
[
  14,
  89,
  107,
  255,
  128,
  169,
  164,
  255,
  211,
  243,
  235,
  255,
  36,
  73,
  75,
  255,
]
`;

exports[`profile round-trips > Fuji Velvia 50 — processImageData with default settings produces stable output 1`] = `
[
  0,
  75,
  115,
  255,
  120,
  146,
  171,
  255,
  203,
  222,
  250,
  255,
  29,
  58,
  76,
  255,
]
`;

exports[`profile round-trips > Fujifilm 200 — processImageData with default settings produces stable output 1`] = `
[
  23,
  79,
  100,
  255,
  128,
  153,
  158,
  255,
  208,
  226,
  229,
  255,
  41,
  65,
  72,
  255,
]
`;

exports[`profile round-trips > Fujifilm 400 — processImageData with default settings produces stable output 1`] = `
[
  28,
  80,
  97,
  255,
  146,
  153,
  151,
  255,
  229,
  227,
  222,
  255,
  49,
  66,
  68,
  255,
]
`;

exports[`profile round-trips > Fujifilm C200 — processImageData with default settings produces stable output 1`] = `
[
  23,
  81,
  101,
  255,
  130,
  156,
  159,
  255,
  211,
  230,
  231,
  255,
  41,
  67,
  72,
  255,
]
`;

exports[`profile round-trips > Fujifilm Neopan Acros 100 II — processImageData with default settings produces stable output 1`] = `
[
  57,
  57,
  57,
  255,
  136,
  136,
  136,
  255,
  211,
  211,
  211,
  255,
  50,
  50,
  50,
  255,
]
`;

exports[`profile round-trips > Fujifilm Pro 400H — processImageData with default settings produces stable output 1`] = `
[
  34,
  93,
  120,
  255,
  137,
  172,
  190,
  255,
  216,
  238,
  238,
  255,
  49,
  80,
  93,
  255,
]
`;

exports[`profile round-trips > Fujifilm Superia 400 — processImageData with default settings produces stable output 1`] = `
[
  21,
  86,
  98,
  255,
  140,
  164,
  151,
  255,
  225,
  238,
  221,
  255,
  43,
  71,
  69,
  255,
]
`;

exports[`profile round-trips > Generic B&W — processImageData with default settings produces stable output 1`] = `
[
  60,
  60,
  60,
  255,
  136,
  136,
  136,
  255,
  210,
  210,
  210,
  255,
  54,
  54,
  54,
  255,
]
`;

exports[`profile round-trips > Generic Color — processImageData with default settings produces stable output 1`] = `
[
  38,
  68,
  75,
  255,
  148,
  139,
  128,
  255,
  228,
  211,
  194,
  255,
  52,
  56,
  54,
  255,
]
`;

exports[`profile round-trips > Harman Phoenix 200 — processImageData with default settings produces stable output 1`] = `
[
  3,
  76,
  91,
  255,
  155,
  152,
  142,
  255,
  247,
  230,
  217,
  255,
  40,
  57,
  53,
  255,
]
`;

exports[`profile round-trips > Harman Phoenix II 200 — processImageData with default settings produces stable output 1`] = `
[
  14,
  76,
  93,
  255,
  149,
  149,
  146,
  255,
  234,
  224,
  218,
  255,
  44,
  59,
  60,
  255,
]
`;

exports[`profile round-trips > Harman Red 125 — processImageData with default settings produces stable output 1`] = `
[
  36,
  66,
  14,
  255,
  223,
  134,
  43,
  255,
  251,
  212,
  94,
  255,
  84,
  50,
  0,
  255,
]
`;

exports[`profile round-trips > Harman Switch Azure — processImageData with default settings produces stable output 1`] = `
[
  11,
  81,
  133,
  255,
  119,
  158,
  197,
  255,
  204,
  232,
  244,
  255,
  26,
  65,
  93,
  255,
]
`;

exports[`profile round-trips > Ilford Delta 100 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  136,
  136,
  136,
  255,
  213,
  213,
  213,
  255,
  48,
  48,
  48,
  255,
]
`;

exports[`profile round-trips > Ilford Delta 400 — processImageData with default settings produces stable output 1`] = `
[
  46,
  46,
  46,
  255,
  132,
  132,
  132,
  255,
  214,
  214,
  214,
  255,
  40,
  40,
  40,
  255,
]
`;

exports[`profile round-trips > Ilford Delta 3200 — processImageData with default settings produces stable output 1`] = `
[
  29,
  29,
  29,
  255,
  130,
  130,
  130,
  255,
  224,
  224,
  224,
  255,
  21,
  21,
  21,
  255,
]
`;

exports[`profile round-trips > Ilford FP4 Plus — processImageData with default settings produces stable output 1`] = `
[
  57,
  57,
  57,
  255,
  136,
  136,
  136,
  255,
  212,
  212,
  212,
  255,
  50,
  50,
  50,
  255,
]
`;

exports[`profile round-trips > Ilford HP5 Plus — processImageData with default settings produces stable output 1`] = `
[
  51,
  51,
  51,
  255,
  135,
  135,
  135,
  255,
  214,
  214,
  214,
  255,
  45,
  45,
  45,
  255,
]
`;

exports[`profile round-trips > Ilford Ortho Plus — processImageData with default settings produces stable output 1`] = `
[
  45,
  45,
  45,
  255,
  132,
  132,
  132,
  255,
  214,
  214,
  214,
  255,
  38,
  38,
  38,
  255,
]
`;

exports[`profile round-trips > Ilford Pan F Plus 50 — processImageData with default settings produces stable output 1`] = `
[
  49,
  49,
  49,
  255,
  135,
  135,
  135,
  255,
  216,
  216,
  216,
  255,
  42,
  42,
  42,
  255,
]
`;

exports[`profile round-trips > Ilford SFX 200 — processImageData with default settings produces stable output 1`] = `
[
  43,
  43,
  43,
  255,
  131,
  131,
  131,
  255,
  215,
  215,
  215,
  255,
  36,
  36,
  36,
  255,
]
`;

exports[`profile round-trips > Ilford XP2 Super — processImageData with default settings produces stable output 1`] = `
[
  60,
  60,
  60,
  255,
  137,
  137,
  137,
  255,
  211,
  211,
  211,
  255,
  54,
  54,
  54,
  255,
]
`;

exports[`profile round-trips > Kentmere Pan 100 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  136,
  136,
  136,
  255,
  213,
  213,
  213,
  255,
  48,
  48,
  48,
  255,
]
`;

exports[`profile round-trips > Kentmere Pan 200 — processImageData with default settings produces stable output 1`] = `
[
  52,
  52,
  52,
  255,
  135,
  135,
  135,
  255,
  214,
  214,
  214,
  255,
  46,
  46,
  46,
  255,
]
`;

exports[`profile round-trips > Kentmere Pan 400 — processImageData with default settings produces stable output 1`] = `
[
  56,
  56,
  56,
  255,
  138,
  138,
  138,
  255,
  216,
  216,
  216,
  255,
  50,
  50,
  50,
  255,
]
`;

exports[`profile round-trips > Kodak ColorPlus 200 — processImageData with default settings produces stable output 1`] = `
[
  43,
  79,
  80,
  255,
  173,
  152,
  129,
  255,
  245,
  226,
  200,
  255,
  67,
  64,
  52,
  255,
]
`;

exports[`profile round-trips > Kodak Double-X 5222 — processImageData with default settings produces stable output 1`] = `
[
  45,
  45,
  45,
  255,
  134,
  134,
  134,
  255,
  218,
  218,
  218,
  255,
  38,
  38,
  38,
  255,
]
`;

exports[`profile round-trips > Kodak Ektachrome E100 — processImageData with default settings produces stable output 1`] = `
[
  22,
  70,
  96,
  255,
  126,
  138,
  151,
  255,
  204,
  211,
  224,
  255,
  40,
  56,
  67,
  255,
]
`;

exports[`profile round-trips > Kodak Ektacolor Pro 160 — processImageData with default settings produces stable output 1`] = `
[
  46,
  79,
  89,
  255,
  150,
  143,
  137,
  255,
  224,
  212,
  202,
  255,
  63,
  67,
  66,
  255,
]
`;

exports[`profile round-trips > Kodak Ektacolor Pro 400 — processImageData with default settings produces stable output 1`] = `
[
  49,
  83,
  89,
  255,
  163,
  150,
  136,
  255,
  230,
  218,
  203,
  255,
  69,
  71,
  66,
  255,
]
`;

exports[`profile round-trips > Kodak Ektacolor Pro 800 — processImageData with default settings produces stable output 1`] = `
[
  56,
  90,
  96,
  255,
  174,
  159,
  145,
  255,
  229,
  224,
  212,
  255,
  76,
  78,
  73,
  255,
]
`;

exports[`profile round-trips > Kodak Ektapan 100 — processImageData with default settings produces stable output 1`] = `
[
  56,
  56,
  56,
  255,
  136,
  136,
  136,
  255,
  212,
  212,
  212,
  255,
  50,
  50,
  50,
  255,
]
`;

exports[`profile round-trips > Kodak Ektapan 400 — processImageData with default settings produces stable output 1`] = `
[
  51,
  51,
  51,
  255,
  135,
  135,
  135,
  255,
  214,
  214,
  214,
  255,
  44,
  44,
  44,
  255,
]
`;

exports[`profile round-trips > Kodak Ektapan P3200 — processImageData with default settings produces stable output 1`] = `
[
  31,
  31,
  31,
  255,
  131,
  131,
  131,
  255,
  223,
  223,
  223,
  255,
  23,
  23,
  23,
  255,
]
`;

exports[`profile round-trips > Kodak Ektar 100 — processImageData with default settings produces stable output 1`] = `
[
  12,
  70,
  85,
  255,
  140,
  140,
  130,
  255,
  227,
  214,
  198,
  255,
  40,
  54,
  54,
  255,
]
`;

exports[`profile round-trips > Kodak Gold 100 — processImageData with default settings produces stable output 1`] = `
[
  45,
  80,
  80,
  255,
  173,
  149,
  125,
  255,
  245,
  222,
  192,
  255,
  70,
  65,
  52,
  255,
]
`;

exports[`profile round-trips > Kodak Gold 200 — processImageData with default settings produces stable output 1`] = `
[
  44,
  80,
  76,
  255,
  189,
  154,
  120,
  255,
  247,
  232,
  190,
  255,
  73,
  63,
  45,
  255,
]
`;

exports[`profile round-trips > Kodak Kodacolor 100 — processImageData with default settings produces stable output 1`] = `
[
  38,
  76,
  84,
  255,
  158,
  145,
  132,
  255,
  237,
  216,
  200,
  255,
  61,
  62,
  57,
  255,
]
`;

exports[`profile round-trips > Kodak Kodacolor 200 — processImageData with default settings produces stable output 1`] = `
[
  41,
  78,
  82,
  255,
  170,
  149,
  130,
  255,
  245,
  222,
  200,
  255,
  66,
  63,
  54,
  255,
]
`;

exports[`profile round-trips > Kodak Plus-X 125 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  136,
  136,
  136,
  255,
  213,
  213,
  213,
  255,
  49,
  49,
  49,
  255,
]
`;

exports[`profile round-trips > Kodak Portra 160 — processImageData with default settings produces stable output 1`] = `
[
  45,
  78,
  87,
  255,
  151,
  143,
  134,
  255,
  225,
  212,
  199,
  255,
  62,
  66,
  64,
  255,
]
`;

exports[`profile round-trips > Kodak Portra 400 — processImageData with default settings produces stable output 1`] = `
[
  49,
  81,
  85,
  255,
  168,
  148,
  130,
  255,
  233,
  218,
  196,
  255,
  70,
  68,
  61,
  255,
]
`;

exports[`profile round-trips > Kodak Portra 800 — processImageData with default settings produces stable output 1`] = `
[
  55,
  90,
  97,
  255,
  174,
  159,
  145,
  255,
  231,
  224,
  212,
  255,
  76,
  77,
  73,
  255,
]
`;

exports[`profile round-trips > Kodak Pro Image 100 — processImageData with default settings produces stable output 1`] = `
[
  43,
  77,
  85,
  255,
  154,
  144,
  134,
  255,
  231,
  216,
  202,
  255,
  61,
  64,
  61,
  255,
]
`;

exports[`profile round-trips > Kodak T-Max 100 — processImageData with default settings produces stable output 1`] = `
[
  56,
  56,
  56,
  255,
  136,
  136,
  136,
  255,
  212,
  212,
  212,
  255,
  50,
  50,
  50,
  255,
]
`;

exports[`profile round-trips > Kodak T-Max 400 — processImageData with default settings produces stable output 1`] = `
[
  51,
  51,
  51,
  255,
  135,
  135,
  135,
  255,
  215,
  215,
  215,
  255,
  44,
  44,
  44,
  255,
]
`;

exports[`profile round-trips > Kodak Tri-X 400 — processImageData with default settings produces stable output 1`] = `
[
  42,
  42,
  42,
  255,
  134,
  134,
  134,
  255,
  220,
  220,
  220,
  255,
  34,
  34,
  34,
  255,
]
`;

exports[`profile round-trips > Kodak UltraMax 400 — processImageData with default settings produces stable output 1`] = `
[
  39,
  82,
  82,
  255,
  178,
  154,
  127,
  255,
  246,
  229,
  197,
  255,
  68,
  66,
  52,
  255,
]
`;

exports[`profile round-trips > Kodak Verita 200D — processImageData with default settings produces stable output 1`] = `
[
  37,
  78,
  84,
  255,
  166,
  149,
  131,
  255,
  238,
  221,
  201,
  255,
  62,
  63,
  56,
  255,
]
`;

exports[`profile round-trips > Kodak Vision3 50D — processImageData with default settings produces stable output 1`] = `
[
  46,
  78,
  91,
  255,
  146,
  143,
  143,
  255,
  219,
  212,
  209,
  255,
  61,
  67,
  69,
  255,
]
`;

exports[`profile round-trips > Kodak Vision3 200T — processImageData with default settings produces stable output 1`] = `
[
  45,
  84,
  107,
  255,
  154,
  153,
  165,
  255,
  224,
  219,
  223,
  255,
  60,
  72,
  84,
  255,
]
`;

exports[`profile round-trips > Kodak Vision3 250D — processImageData with default settings produces stable output 1`] = `
[
  49,
  82,
  94,
  255,
  155,
  150,
  147,
  255,
  225,
  218,
  214,
  255,
  65,
  70,
  71,
  255,
]
`;

exports[`profile round-trips > Kodak Vision3 500T — processImageData with default settings produces stable output 1`] = `
[
  46,
  87,
  113,
  255,
  160,
  157,
  173,
  255,
  225,
  222,
  225,
  255,
  63,
  75,
  89,
  255,
]
`;

exports[`profile round-trips > LomoChrome Classicolor 200 — processImageData with default settings produces stable output 1`] = `
[
  38,
  77,
  86,
  255,
  157,
  147,
  136,
  255,
  237,
  219,
  205,
  255,
  59,
  63,
  59,
  255,
]
`;

exports[`profile round-trips > LomoChrome Color '92 Sun-kissed — processImageData with default settings produces stable output 1`] = `
[
  38,
  81,
  75,
  255,
  177,
  154,
  121,
  255,
  247,
  230,
  191,
  255,
  67,
  64,
  45,
  255,
]
`;

exports[`profile round-trips > LomoChrome Color '92 — processImageData with default settings produces stable output 1`] = `
[
  21,
  79,
  99,
  255,
  147,
  151,
  153,
  255,
  232,
  225,
  225,
  255,
  46,
  63,
  68,
  255,
]
`;

exports[`profile round-trips > LomoChrome Metropolis — processImageData with default settings produces stable output 1`] = `
[
  18,
  64,
  81,
  255,
  135,
  144,
  148,
  255,
  222,
  223,
  225,
  255,
  34,
  50,
  56,
  255,
]
`;

exports[`profile round-trips > LomoChrome Purple — processImageData with default settings produces stable output 1`] = `
[
  36,
  83,
  97,
  255,
  152,
  152,
  162,
  255,
  234,
  222,
  235,
  255,
  52,
  68,
  70,
  255,
]
`;

exports[`profile round-trips > LomoChrome Turquoise — processImageData with default settings produces stable output 1`] = `
[
  25,
  81,
  131,
  255,
  125,
  156,
  192,
  255,
  206,
  230,
  245,
  255,
  37,
  66,
  92,
  255,
]
`;

exports[`profile round-trips > Lomography Berlin Kino 400 — processImageData with default settings produces stable output 1`] = `
[
  50,
  50,
  50,
  255,
  137,
  137,
  137,
  255,
  219,
  219,
  219,
  255,
  43,
  43,
  43,
  255,
]
`;

exports[`profile round-trips > Lomography CN 400 — processImageData with default settings produces stable output 1`] = `
[
  23,
  78,
  86,
  255,
  165,
  152,
  133,
  255,
  249,
  228,
  205,
  255,
  55,
  61,
  52,
  255,
]
`;

exports[`profile round-trips > Lomography CN 800 — processImageData with default settings produces stable output 1`] = `
[
  28,
  81,
  92,
  255,
  170,
  156,
  142,
  255,
  244,
  231,
  216,
  255,
  59,
  65,
  58,
  255,
]
`;

exports[`profile round-trips > Lomography Potsdam Kino 100 — processImageData with default settings produces stable output 1`] = `
[
  50,
  50,
  50,
  255,
  135,
  135,
  135,
  255,
  215,
  215,
  215,
  255,
  43,
  43,
  43,
  255,
]
`;

exports[`profile round-trips > Lomography Redscale XR — processImageData with default settings produces stable output 1`] = `
[
  43,
  65,
  10,
  255,
  232,
  133,
  38,
  255,
  253,
  212,
  90,
  255,
  91,
  49,
  0,
  255,
]
`;

exports[`profile round-trips > Rollei RPX 25 — processImageData with default settings produces stable output 1`] = `
[
  52,
  52,
  52,
  255,
  136,
  136,
  136,
  255,
  215,
  215,
  215,
  255,
  46,
  46,
  46,
  255,
]
`;

exports[`profile round-trips > Rollei RPX 100 — processImageData with default settings produces stable output 1`] = `
[
  54,
  54,
  54,
  255,
  136,
  136,
  136,
  255,
  214,
  214,
  214,
  255,
  47,
  47,
  47,
  255,
]
`;

exports[`profile round-trips > Rollei RPX 400 — processImageData with default settings produces stable output 1`] = `
[
  54,
  54,
  54,
  255,
  137,
  137,
  137,
  255,
  217,
  217,
  217,
  255,
  47,
  47,
  47,
  255,
]
`;
